[package]
name = "configcat"
description = "ConfigCat Rust SDK"
authors = ["ConfigCat"]
homepage = "https://configcat.com"
repository = "https://github.com/configcat/rust-sdk"
documentation = "https://configcat.com/docs/sdk-reference/rust"
keywords = ["configcat", "feature-flag", "feature-toggle"]
license = "MIT"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
log = { version = "0.4", features = ["kv"] }
chrono = "0.4.38"
thiserror = "1.0"
reqwest = "0.12.4"
futures = "0.3.12"
tokio = { version = "1.17.0", features = ["rt", "sync", "macros"] }
tokio-util = "0.7"
lazy_static = "1.4"
sha1 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
semver = "1.0"

[build-dependencies]
built = "0.7"

[dev-dependencies]
mockito = "1.2.0"
tokio = { version = "1.17.0", features = ["macros"] }
